tests/lean/namespace_bug.lean.expected.out
namespace_bug.lean:3:7: error: invalid expression
